--- a/mobile-aggregate-qr/package.json
+++ b/mobile-aggregate-qr/package.json
@@ -9,17 +9,18 @@
   },
   "dependencies": {
     "base-64": "^0.1.0",
-    "expo": "^37.0.12",
-    "expo-file-system": "~8.1.0",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "expo": "^40.0.0",
+    "expo-barcode-scanner": "^9.1.0",
+    "expo-file-system": "~9.3.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-easy-toast": "^1.2.0",
-    "react-native-web": "^0.11.4",
+    "react-native-web": "~0.13.12",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "8.3.0"
   },
   "private": true
 }
